@@ -1,5 +1,5 @@
 .\" -*- coding: us-ascii -*-
-.TH conky 1 2006-04-23  
+.TH conky 1 2006-05-09  
 .SH NAME
 conky \- A system monitor for X originally based on the torsmo code, but more kickass. It just keeps on given'er. Yeah.
 .SH SYNOPSIS
@@ -497,8 +497,8 @@ Same as execbar, except with an interval
 Same as execigraph, but takes an interval arg graphs values
 
 .TP 
-\fBfont\fR \fBfont\fR 
-Specify a different font. Only applies to one line.
+\fBfont\fR \fB(font)\fR 
+Specify a different font. This new font will apply to the current line and everything following. You can use a $font with no arguments to change back to the default font (much like with $color)
 
 .TP 
 \fBfreq\fR 
